--- a/index.html
+++ b/index.html
@@ -78,7 +78,11 @@
         </div>
       </div>
     </div>
-
+    <div>
+<p> 
+    <a href="#" id="code"> Open-source code </a> by Julia Struk
+</p>
+</div>
     <script src="src/index.js"></script>
   </body>
 </html>
