--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
     <div>
 <p> 
-    <a href="#" id="code"> Open-source code </a> by Julia Struk
+    <a href="https://github.com/juliasstruk/WeatherbyJS" id="code"> Open-source code </a> by Julia Struk
 </p>
 </div>
     <script src="src/index.js"></script>
